2007-04-09 Rene Fritz <r.fritz@colorcube.de>

	* Added: Added editor example

06-05-06 Rene Fritz  <r.fritz@colorcube.de>

	* Fix: use of escapeStrForLike()

06-04-07 Rene Fritz  <r.fritz@colorcube.de>

	* 1.0 release