@@ -1,11 +1,15 @@
+2007-10-17  Michael Stucki  <michael@typo3.org>
+
+	* Takeover by the DAM development team
+
 2007-04-09 Rene Fritz <r.fritz@colorcube.de>
 
 	* Added: Added editor example
 
-06-05-06 Rene Fritz  <r.fritz@colorcube.de>
+2006-05-06 Rene Fritz  <r.fritz@colorcube.de>
 
 	* Fix: use of escapeStrForLike()
 
-06-04-07 Rene Fritz  <r.fritz@colorcube.de>
+2006-04-07 Rene Fritz  <r.fritz@colorcube.de>
 
 	* 1.0 release
